<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".view.TaskActivity">

    <TextView
        android:id="@+id/taskTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskTitleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_title_et"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleTv" />

    <TextView
        android:id="@+id/taskDescriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_description_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleEt" />

    <EditText
        android:id="@+id/taskDescriptionEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/task_description_et"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDescriptionTv" />

    <TextView
        android:id="@+id/taskPreviousToFinishTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_previous_finish_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDescriptionEt" />

    <EditText
        android:id="@+id/taskPreviousToFinishEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_previous_finish_et"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskPreviousToFinishTv" />

    <TextView
        android:id="@+id/taskCreatedAtTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_created_at_tv"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskPreviousToFinishEt" />

    <EditText
        android:id="@+id/taskCreatedAtEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_created_at_et"
        android:importantForAutofill="no"
        android:inputType="date"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskCreatedAtTv" />

    <TextView
        android:id="@+id/taskUserTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_user_tv"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskCreatedAtEt" />

    <EditText
        android:id="@+id/taskUserEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_user_et"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskUserTv" />

    <TextView
        android:id="@+id/taskCompletedByTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_completed_by_tv"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskUserEt" />

    <EditText
        android:id="@+id/taskCompletedByEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_completed_by_et"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskCompletedByTv" />

    <Button
        android:id="@+id/taskSaveBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_save_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskCompletedByEt" />
</androidx.constraintlayout.widget.ConstraintLayout>