<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginEmailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/create_account_login_resetPass_email_et"
            android:gravity="center"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/loginPassEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:hint="@string/create_account_login_pass_et"
            android:gravity="center"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/loginLoginBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_login_bt" />

        <View
            android:id="@+id/loginFirstDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginVertical="16dp" />

        <Button
            android:id="@+id/loginPasswordResetBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_pass_reset_bt" />

        <Button
            android:id="@+id/loginCreateAccountBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_create_account_bt"
            android:layout_marginTop="16dp" />

        <View
            android:id="@+id/loginSecondDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginVertical="16dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/loginGoogleBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>